typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName41.ts.stderr
error: TS2464 {
    span: Span {
        lo: BytePos(
            31,
        ),
        hi: BytePos(
            40,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName41.ts:3:5
  |
3 |     [0 in []]: true
  |     ^^^^^^^^^

